# Skilo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  skilo.conf
cmake/: CRoaring.cmake  RocaPinyin.cmake  RocksDB.cmake  g3logger.cmake  libcuckoo.cmake  libfor.cmake
src/: CMakeLists.txt  README.md  Skilo.cpp  Skilo.h  SkiloConfig.cpp  SkiloConfig.h  main.cpp  skilo.conf
src/Core/: Collection.cpp  Collection.h
src/Storage/: CMakeLists.txt  Storage.cpp  Storage.h
src/core/: Collection.cpp  Collection.h  CollectionManager.cpp  CollectionManager.h  Document.cpp  Document.h  Schema.cpp  Schema.h  Skilo.cpp  Skilo.h
src/core/art/: Art.hpp  ArtNode.hpp
src/core/index/: Art.hpp  ArtNode.hpp  CompressableArray.cpp  CompressableArray.h  CompressedScalar.hpp  IndexBuilder.cpp  IndexBuilder.h  IndexWriter.cpp  IndexWriter.h  Indexes.cpp  Indexes.h  InvertIndex.cpp  InvertIndex.h  PostingList.cpp  PostingList.h  README.md  Tokenizer.cpp  Tokenizer.h
src/core/schema/: Field.cpp  Field.h  README.md  Schema.cpp  Schema.h
src/core/search/: AutoSuggestion.cpp  AutoSuggestion.h  DocRanker.cpp  DocRanker.h  HitCollector.cpp  HitCollector.h  IndexSearcher.cpp  IndexSearcher.h  MatchContext.hpp  README.md  Scorer.cpp  Scorer.h
src/storage/: KeyConverter.hpp  Storage.cpp  Storage.h  StorageEngine.cpp  StorageEngine.h  StorageService.cpp  StorageService.h
src/util/: RWLock.hpp  Util.cpp  Util.h
src/utility/: CodeTiming.h  ConfigReader.cpp  ConfigReader.h  Exception.cpp  Exception.h  LogSink.h  Number.h  RWLock.hpp  Util.h
test/: CMakeLists.txt  art_tst.cpp  auto_suggest_tst.cpp  collection_manager_tst.cpp  document.json  document_tst.cpp  hit_collector_tst.cpp  scalar_tst.cpp  schema_tst.cpp  skilo_server_tst.cpp  tokenizer_tst.cpp  tst_config_reader.cpp
test/dataset/: document.json  test_json_1.txt  test_json_3.txt  test_xml_1.txt  tst_simple_eng.txt
